--- a/src/styles/normalize.css
+++ b/src/styles/normalize.css
@@ -8,6 +8,13 @@
  * 2. Prevent adjustments of font size after orientation changes in iOS.
  */
 
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+
 html {
     line-height: 1.15;
     /* 1 */
@@ -82,6 +89,11 @@ pre {
 
 a {
     background-color: transparent;
+    text-decoration: none;
+}
+
+li {
+    list-style: none;
 }
 
 /**
