--- a/style.css
+++ b/style.css
@@ -1,1 +1,67 @@
 @import url('./src/styles/normalize.css');
+
+* {
+    font-family: 'Open Sans', sans-serif; 
+}
+
+section {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    width: 100%;
+}
+
+header {
+    position: absolute;
+    top: 0;
+    width: 100%;
+    padding: 30px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+header .logo img {
+    position: relative;
+    max-width: 200px;
+}
+
+header i {
+    cursor: pointer;
+    font-size: 1.5rem;
+}
+
+.navigation {
+    gap: 30px;
+    bottom: 30px;
+    display: flex;
+    position: absolute;
+}
+
+.navigation li {
+    position: relative;
+}
+
+.navigation li a {
+    color: #333;
+    width: 60px;
+    height: 60px;
+    display: flex;
+    font-size: 1.2rem;
+    background: #fff;
+    box-shadow: 0 10px 25px rgba(0, 0, 0, .1);
+    align-items: center;
+    border-radius: 50%;
+    justify-content: center;
+    transition: all .3s ease-in-out;
+}
+
+.navigation li a:hover {
+    background: #ccc;
+}
+
+.navigation li.active a {
+    color: #fff;
+    background: #f00;
+}
