--- a/style.css
+++ b/style.css
@@ -54,7 +54,6 @@ header i {
     align-items: center;
     border-radius: 50%;
     justify-content: center;
-    transition: all .3s ease-in-out;
 }
 
 .navigation li a:hover {
@@ -64,4 +63,73 @@ header i {
 .navigation li.active a {
     color: #fff;
     background: #f00;
+}
+
+.imgScroll {
+    left: 0;
+    width: 100%;
+    display: flex;
+    padding: 60px 0;
+    position: absolute;
+    overflow-x: hidden;
+}
+
+.imgScroll div {
+    display: flex;
+    animation: animate 40s linear infinite;
+    animation-delay: -40px;
+}
+
+.imgScroll div:nth-child(2) {
+    animation: animate2 40s linear infinite;
+    animation-delay: -20px;
+}
+
+.imgScroll:hover div,
+.imgScroll:hover div:nth-child(2) {
+    animation-play-state: paused ;
+}
+
+.imgScroll div img {
+    cursor: pointer;
+    margin: 0 25px;
+    transition: .25s;
+    box-shadow: 0 10px 25px rgba(0, 0, 0, .1);
+    max-width: 300px;
+    border-radius: 24px;
+}
+
+.imgScroll div img:hover {
+    border: 5px solid #f00;
+    box-shadow: 0 20px 40px rgba(0, 0, 0, .1);
+}
+
+.imgScroll:hover div img {
+    filter: blur(5px);
+    opacity: .05;
+}
+
+.imgScroll div img:hover {
+    opacity: 1;
+    filter: blur(0px);
+}
+
+@keyframes animate {
+    0% {
+        transform: translateX(100%);
+    }
+
+    100% {
+        transform: translateX(-100%);
+    }
+}
+
+@keyframes animate2 {
+    0% {
+        transform: translateX(0%);
+    }
+
+    100% {
+        transform: translateX(-200%);
+    }
 }
